<resources>
    <string name="app_name">WeatherSphere</string>
    <string name="location_permission_rationale">We need access to your location to fetch weather data.</string>
    <string name="choose_location">Location:</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="city">Al-Obour</string>
    <string name="favourite">Favourite</string>
    <string name="sunny_day">Sunny Day</string>
    <string name="day_degree">23/13°c</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="now">Now</string>
    <string name="home">Home</string>
    <string name="alert">Alert</string>
    <string name="setting">Setting</string>
    <string name="time">9:09 AM</string>
    <string name="date">9 Sep 2023</string>
    <string name="notification">Notification</string>
    <string name="add_alert">Add Alert</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="weather_alarm">Weather Alarm</string>
    <string name="weather">Weather</string>
    <string name="location">Location</string>
    <string name="meter_second">Meter/Second</string>
    <string name="mile_hour">Mile/Hour</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="temperature">Temperature</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="hpa">hpa</string>
    <string name="percentage">%</string>
    <string name="k">K</string>
    <string name="f">F</string>
    <string name="c">C</string>
    <string name="m">m</string>
    <string name="notification_title">Today Weather</string>
</resources>